# data4fun

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  log-100DaysOfCode.md
include/: ConsoleApp.h  GLhelper.h  presentation.h  spdlog  spdlogwrap.h
include/data/: common.h  location.h
src/: ConsoleApp.cpp  GLhelper.cpp  main.cpp  spdlogwrap.cpp
src/console/: ConsoleApp.cpp
src/data/: common.cpp  location.cpp
src/gl/: GLhelper.cpp
test/: ConsoleAppTest.cpp  data4funtest.cpp  main.cpp
